# pkglts

./: .coveragerc  .flake8  .gitignore  .gitignore.extra  .landscape.yml  .mailmap  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  dvlpt_requirements.txt  dvlpt_requirements.yml  entry_points.json  pkg_cfg.json  pkg_hash.json  pyproject.toml  requirements.txt  requirements.yml  requirements_minimal.txt  setup.cfg  setup.py  tox.ini
.pkglts/: pkg_cfg.json  pkg_hash.json  pkg_version.json
conda/: meta.yaml  requirements.yml  requirements_minimal.yml
conda_pkglts/: meta.yaml
doc/: README_body.rst  conf.py  generate.py  index.rst  installation.rst  make.bat  option_list.rst  readme.rst  tool_list.rst  tutorials.rst  usage.rst
doc/_notebook/: example.rst  index.rst
doc/_static/: readme.txt
doc/option/base/: main.rst  modifications.html  modifications_namespace.html
doc/option/conda/: main.rst  modifications.html
doc/option/coverage/: main.rst  modifications.html
doc/option/coveralls/: main.rst
doc/option/data/: data_tutorial.rst  main.rst  modifications.html
doc/option/doc/: main.rst  modifications.html
doc/option/flake8/: main.rst  modifications.html
doc/option/git/: main.rst  modifications.html
doc/option/github/: github_tutorial.rst  main.rst
doc/option/gitlab/: gitlab_tutorial.rst  main.rst
doc/option/landscape/: landscape_tutorial.rst  main.rst  modifications.html
doc/option/lgtm/: main.rst
doc/option/license/: gen_license_list.py  license_list.rst  main.rst  modifications.html
doc/option/notebook/: main.rst  nbcompile.rst
doc/option/plugin/: main.rst  plugin_tutorial.rst
doc/option/plugin_project/: main.rst  modifications.html
doc/option/pydist/: main.rst
doc/option/pypi/: main.rst  modifications.html  pypi_tutorial.rst
doc/option/pyproject/: main.rst  modifications.html
doc/option/pysetup/: main.rst  modifications.html  reqs.rst
doc/option/readthedocs/: main.rst  readthedocs_tutorial.rst
doc/option/reqs/: main.rst  modifications.html  reqs_tool.rst
doc/option/requires/: main.rst  requires_tutorial.rst
doc/option/setup/: main.rst
doc/option/sphinx/: main.rst  modifications.html
doc/option/test/: main.rst  modifications.html
doc/option/tox/: main.rst  modifications.html
doc/option/travis/: main.rst  modifications.html  travis_tutorial.rst
doc/option/version/: bump.rst  main.rst  modifications.html
doc/tool/history/: main.rst
doc/tutorial/: dvlpt_env.rst  migration.rst  pypi.rst  web_tools.rst
example/: test_data.py  tuto - base.py  tuto - coverage.py  tuto - data.py  tuto - doc.py  tuto - license.py  tuto - plugin.py  tuto - pypi.py  tuto - pysetup.py  tuto - sphinx.py  tuto - test.py  tuto_tools.py
recipe/: openalea.py
src/pkglts/: __init__.py  config.py  config_management.py  config_managment.py  data_access.py  dependency.py  example.py  file_management.py  github.py  hash_management.py  hash_managment.py  local.py  logging_tools.py  manage.py  manage_script.py  manage_tools.py  option_object.py  option_tools.py  rmtfile.py  small_tools.py  templating.py  tree_ascii_fmt.py  version.py  version_management.py  versioning.py
src/pkglts/install_env/: __init__.py  conda_front_end.py  load_front_end.py  pip_front_end.py  stdout_front_end.py
src/pkglts/option/: __init__.py
src/pkglts/option/pyproject/resource/: pyproject.toml  setup.py.tpl
src/pkglts/resource/: namespace__init__.py.tpl
src/pkglts/tool/: bump_version.py  history.py
src/pkglts_data/base/: {{coverage del, }}.coveragerc  {{doc del, AUTHORS}}.rst  {{doc del, README}}.rst  {{github del, }}.gitignore  {{license del, LICENSE}}  {{pydist del, MANIFEST}}.in  {{pydist del, requirements}}.txt  {{pydist del, setup}}.cfg  {{pydist del, setup}}.py  {{tox del, tox}}.ini  {{travis del, .travis}}.yml
src/pkglts_data/test/: tutu.txt
test/: __init__.py  conftest.py  test_config_management.py  test_data_access.py  test_dependency.py  test_example.py  test_file_management.py  test_file_management_modif.py  test_file_management_revision.py  test_github.py  test_hash_management.py  test_local.py  test_manage.py  test_manage_cfg.py  test_manage_clean.py  test_manage_example.py  test_manage_regenerate.py  test_manage_reset.py  test_manage_tools_check_option_parameters.py  test_manage_tools_check_tempering.py  test_manage_tools_clone.py  test_manage_tools_hash.py  test_manage_tools_regenerate.py  test_manage_tools_update_option.py  test_option_tools.py  test_rmtfile.py  test_templating.py  test_version_management.py  test_versioning.py
test/test_install_env/: my_first_p-0.0.4-py2.py3-none-any.whl  test_load_front_end.py  test_pip.py  test_stdout.py  venv_tools.py
test/test_option/: test_option_common.py
test/test_option/test_appveyor/: test_config.py  test_handlers.py
test/test_option/test_base/: test_config.py  test_handlers.py
test/test_option/test_black/: test_config.py
test/test_option/test_conda/: test_config.py
test/test_option/test_conda_alias/: test_config.py
test/test_option/test_coverage/: test_config.py  test_handlers.py
test/test_option/test_coveralls/: test_config.py  test_handlers.py
test/test_option/test_data/: test_config.py  test_handlers.py
test/test_option/test_doc/: test_badge.py  test_config.py  test_fmt_badge.py  test_handlers.py
test/test_option/test_example/: test_config.py  test_handlers.py
test/test_option/test_flake8/: test_config.py  test_handlers.py
test/test_option/test_git/: test_config.py  test_handlers.py
test/test_option/test_github/: test_config.py  test_handlers.py
test/test_option/test_gitlab/: test_config.py  test_handlers.py
test/test_option/test_landscape/: test_config.py  test_handlers.py
test/test_option/test_lgtm/: test_config.py  test_handlers.py
test/test_option/test_license/: test_config.py  test_handlers.py
test/test_option/test_notebook/: test_config.py
test/test_option/test_plugin/: test_config.py  test_handlers.py
test/test_option/test_plugin_project/: test_config.py
(+355 files in other folders)
